<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">lab6-Retrofit-and-Networking-Requests</string>
    <string name="app_title">Weather Predictor</string>
    <string name="weather_title">Weather Predictor</string>
    <string name="enter_name">Enter Name: </string>
    <string name="enter_name_hint">Sean</string>
    <string name="predict_button_label">Predict</string>
    <string name="future_prediction">I predict…</string>
    <string name="historical_predictions">Historical Predictions</string>
    <string name="prediction_title">Weather Predictions</string>
    <string name="finish_button_label">Finish</string>
    <string name="latest_predictions">Latest Prediction</string>
    <string name="weather_icon_description">An icon representing the current weather</string>
    <string name="enter_location">Enter City:</string>
    <string name="enter_location_hint">Halifax</string>
    <string name="location_preset">Location: Toronto, ON, Canada\nTemperature: 25°C / 77°F\nWind: 15 kph from the SW\nLast updated: 2023-10-27 10:00\n\n---\n\nLocation: Halifax, NS, Canada\nTemperature: 15°C / 59°F\nWind: 25 kph from the E\nLast updated: 2023-10-26 14:00</string>
</resources>
