<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/layout_padding">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_title"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weather_prediction_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/enter_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_location"
        app:layout_constraintTop_toBottomOf="@id/weather_prediction_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/city_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location_hint"
        app:layout_constraintTop_toBottomOf="@id/enter_city_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predict_button_label"
        app:layout_constraintTop_toBottomOf="@id/city_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
