<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PredictionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/prediction_title"
        app:titleTextColor="@color/toolbar_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin">

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="@dimen/zero_margin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_top"
                android:gravity="center"
                android:paddingStart="@dimen/layout_padding"
                android:paddingEnd="@dimen/layout_padding"
                android:text="@string/latest_predictions"
                android:textColor="@color/hunter_green"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subheading_textview"
                android:layout_width="@dimen/zero_margin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/subtitle_margin_top"
                android:gravity="center"
                android:paddingStart="@dimen/layout_padding"
                android:paddingEnd="@dimen/layout_padding"
                android:text="@string/future_prediction"
                android:textColor="@color/hunter_green"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textview" />

            <TextView
                android:id="@+id/prediction_weather_message_textview"
                android:layout_width="@dimen/zero_margin"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:gravity="center"
                android:minHeight="100dp"
                android:textColor="@color/high_contrast_green"
                android:textSize="@dimen/subtitle_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subheading_textview"
                tools:text="TextView for API Response" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/prediction_weather_message_textview"
                app:layout_constraintEnd_toEndOf="@+id/prediction_weather_message_textview"
                app:layout_constraintStart_toStartOf="@+id/prediction_weather_message_textview"
                app:layout_constraintTop_toTopOf="@+id/prediction_weather_message_textview"
                tools:visibility="visible" />

            <Button
                android:id="@+id/prediction_activity_finish_button"
                style="@style/Custom_Button_Theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin_top"
                android:text="@string/finish_button_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prediction_weather_message_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>